--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <button class="showCart">Go to Cart</button>
+        <button class="goBack">Go Back</button>
     </header>
     <main>
         <div class="container">
